syntax = "proto3";
package evops.ext.v1;

import "google/protobuf/empty.proto";

message MarkdownRoot {
  repeated MarkdownRootChild children = 1;
  MarkdownPosition position = 2;
}

message MarkdownPoint {
  uint32 line = 1;
  uint32 column = 2;
  uint32 offset = 3;
}

message MarkdownPosition {
  MarkdownPoint start = 1;
  MarkdownPoint end = 2;
}

message MarkdownRootChild {
  oneof child {
    MarkdownParagraph paragraph = 1;
    MarkdownHeading heading = 2;
    MarkdownList list = 3;
    MarkdownBlockquote blockquote = 4;
    MarkdownCode code = 5;
    MarkdownThematicBreak thematic_break = 6;
  }
}

message MarkdownParagraph {
  repeated MarkdownParagraphChild children = 1;
  MarkdownPosition position = 2;
}

message MarkdownParagraphChild {
  oneof child {
    MarkdownText text = 1;
    MarkdownStrong strong = 2;
    MarkdownEmphasis emphasis = 3;
    MarkdownDelete delete = 4;
    MarkdownInlineCode inline_code = 5;
    MarkdownLink link = 6;
  }
}

message MarkdownText {
  string value = 1;
  MarkdownPosition position = 2;
}

message MarkdownStrong {
  repeated MarkdownParagraphChild children = 1;
  MarkdownPosition position = 2;
}

message MarkdownEmphasis {
  repeated MarkdownParagraphChild children = 1;
  MarkdownPosition position = 2;
}

message MarkdownDelete {
  repeated MarkdownParagraphChild children = 1;
  MarkdownPosition position = 2;
}

message MarkdownInlineCode {
  string value = 1;
  MarkdownPosition position = 2;
}

message MarkdownLink {
  repeated MarkdownLinkChild children = 1;
  MarkdownPosition position = 2;
  string url = 3;
}

message MarkdownLinkChild {
  oneof child {
    MarkdownText text = 1;
    MarkdownStrong strong = 2;
    MarkdownEmphasis emphasis = 3;
    MarkdownDelete delete = 4;
    MarkdownInlineCode inline_code = 5;
  }
}

message MarkdownHeading {
  repeated MarkdownParagraphChild children = 1;
  MarkdownPosition position = 2;
  MarkdownHeadingDepth depth = 3;
}

enum MarkdownHeadingDepth {
  MARKDOWN_HEADING_DEPTH_UNSPECIFIED = 0;
  MARKDOWN_HEADING_DEPTH_1 = 1;
  MARKDOWN_HEADING_DEPTH_2 = 2;
  MARKDOWN_HEADING_DEPTH_3 = 3;
  MARKDOWN_HEADING_DEPTH_4 = 4;
  MARKDOWN_HEADING_DEPTH_5 = 5;
  MARKDOWN_HEADING_DEPTH_6 = 6;
}

message MarkdownList {
  repeated MarkdownListItem children = 1;
  MarkdownPosition position = 2;
  bool ordered = 3;
  bool spread = 4;
}

message MarkdownListItem {
  repeated MarkdownRootChild children = 1;
  MarkdownPosition position = 2;
  bool spread = 3;
}

message MarkdownBlockquote {
  repeated MarkdownRootChild children = 1;
  MarkdownPosition position = 2;
}

message MarkdownCode {
  string value = 1;
  MarkdownPosition position = 2;
  optional string lang = 3;
}

message MarkdownThematicBreak {
  MarkdownPosition position = 1;
}

message ValidateUserNameResult {
  oneof result {
    google.protobuf.Empty ok = 1;
    google.protobuf.Empty len_char_max_violated = 2;
    google.protobuf.Empty not_empty_violated = 3;
  }
}

message ValidateEventTitleResult {
  oneof result {
    google.protobuf.Empty ok = 1;
    google.protobuf.Empty len_char_max_violated = 2;
    google.protobuf.Empty not_empty_violated = 3;
  }
}

message ValidateEventDescriptionResult {
  oneof result {
    google.protobuf.Empty ok = 1;
    google.protobuf.Empty len_char_max_violated = 2;
    google.protobuf.Empty not_empty_violated = 3;
  }
}

message ValidateTagNameResult {
  oneof result {
    google.protobuf.Empty ok = 1;
    google.protobuf.Empty len_char_max_violated = 2;
    google.protobuf.Empty not_empty_violated = 3;
    google.protobuf.Empty regex_violated = 4;
  }
}

message ValidateTagAliasResult {
  oneof result {
    google.protobuf.Empty ok = 1;
    google.protobuf.Empty len_char_max_violated = 2;
    google.protobuf.Empty not_empty_violated = 3;
  }
}
